XWIKI-18733: Replace the Affected Children livetable of the Delete page with a LiveData